Update util-deploy versions and add get/settzattr.